Made tabs larger + fixed(?) tab text clipping

--- a/styles.css
+++ b/styles.css
@@ -172,10 +172,12 @@ a {
 }
 
 .tab {
-  width: 100px;
+  width: 150px;
   height: 30px;
   font-size: 18px;
-  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: clip;
   border: none;
   cursor: pointer;
   margin: 5px 5px 0 5px;
